--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "datadog-formatting-layer"
 description = "This crates provides a tracing layer to format events for datadog"
-author = ["open-schnick <dev2@filefighter.de>"]
+authors = ["open-schnick <dev2@filefighter.de>"]
 version = "0.1.0"
 edition = "2021"
 
@@ -10,5 +10,9 @@ edition = "2021"
 chrono = "0.4.26"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
+# tracing
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+# otel
+tracing-opentelemetry = { version = "0.19.0", default-features = false }
+opentelemetry = { version = "0.19.0", default-features = false }
