--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,6 @@ tracing-subscriber = "0.3.17"
 # otel
 tracing-opentelemetry = { version = "0.19.0", default-features = false }
 opentelemetry = { version = "0.19.0", default-features = false }
+
+[dev-dependencies]
+opentelemetry-datadog = { version = "0.7.0", features = ["reqwest-client"] }
