--- a/.github/workflows/tests (Main).yml
+++ b/.github/workflows/tests (Main).yml
@@ -18,10 +18,8 @@ jobs:
         with:
           toolchain: stable
       - uses: Swatinem/rust-cache@v2
-      - name: Install cargo-nextest
-        run: cargo install cargo-nextest
       - name: Run tests
-        run: cargo nextest run --all
+        run: cargo test --all
 
   fmt:
     name: Rustfmt
