--- a/.github/workflows/tests (Main).yml
+++ b/.github/workflows/tests (Main).yml
@@ -34,17 +34,18 @@ jobs:
         run: cargo fmt --check
 
   clippy:
-    name: Clippy
+    name: Linting
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
-          components: clippy
       - uses: Swatinem/rust-cache@v2
+      - name: Install cargo-lints
+        run: cargo install cargo-lints
       - name: Linting
-        run: cargo clippy -- -D warnings
+        run: cargo lints clippy
 
   coverage:
     name: Code coverage
