--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ homepage = "https://github.com/open-schnick/DatadogFormattingLayer"
 repository = "https://github.com/open-schnick/DatadogFormattingLayer"
 license = "Apache-2.0"
 keywords = ["tracing", "tracing-subscriber", "layer", "datadog"]
+categories = ["development-tools::debugging"]
 version = "1.1.0"
 edition = "2021"
 
