ci: use cargo nextest instead of cargo test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,8 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
-      - name: cargo generate-lockfile
-        if: hashFiles('Cargo.lock') == ''
-        run: cargo generate-lockfile
-      - name: cargo test --locked
-        run: cargo test --locked --all-features --all-targets
+      - uses: taiki-e/install-action@cargo-nextest
+      - name: cargo nextest run --all
+        run: cargo nextest run --all
+      - name: cargo test --doc
+        run: cargo test --doc
