--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,10 +20,11 @@ serde_json = "1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 # otel
-tracing-opentelemetry = { version = "0.21.0", default-features = false }
-opentelemetry = { version = "0.20.0", default-features = false }
+tracing-opentelemetry = { version = "0.23.0", default-features = false }
+opentelemetry = { version = "0.22.0", default-features = false }
 
 [dev-dependencies]
-opentelemetry-datadog = { version = "0.8.0", features = ["reqwest-client"] }
+opentelemetry-datadog = { version = "0.10.0", features = ["reqwest-client"] }
+opentelemetry_sdk = "0.22.1"
 regex = "1.10.3"
 smoothy = "0.4.3"
