refactor: migrate clippy lints into Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,74 @@ opentelemetry-datadog = { version = "0.10.0", features = ["reqwest-client"] }
 opentelemetry_sdk = "0.22.1"
 regex = "1.10.3"
 smoothy = "0.4.4"
+
+[lints.rust]
+missing_docs = "deny"
+
+[lints.rustdoc]
+broken_intra_doc_links = "deny"
+private_intra_doc_links = "deny"
+private_doc_tests = "warn"
+invalid_codeblock_attributes = "deny"
+invalid_html_tags = "deny"
+invalid_rust_codeblocks = "deny"
+bare_urls = "deny"
+unescaped_backticks = "deny"
+redundant_explicit_links = "deny"
+
+[lints.clippy]
+# enable more lint groups
+pedantic = { level = "deny", priority = -1 }
+nursery = { level = "deny", priority = -1 }
+# enable extra restriction lints
+as_conversions = "deny"
+as_underscore = "deny"
+clone_on_ref_ptr = "deny"
+dbg_macro = "deny"
+deref_by_slicing = "deny"
+else_if_without_else = "deny"
+empty_drop = "deny"
+empty_structs_with_brackets = "deny"
+error_impl_error = "deny"
+expect_used = "deny"
+panic = "deny"
+todo = "deny"
+try_err = "deny"
+unimplemented = "deny"
+unreachable = "deny"
+unwrap_in_result = "deny"
+unwrap_used = "deny"
+format_push_string = "deny"
+if_then_some_else_none = "deny"
+indexing_slicing = "deny"
+integer_division = "deny"
+let_underscore_must_use = "deny"
+let_underscore_untyped = "deny"
+mem_forget = "deny"
+missing_assert_message = "deny"
+mod_module_files = "deny"
+mixed_read_write_in_expression = "deny"
+multiple_inherent_impl = "deny"
+needless_raw_strings = "deny"
+print_stderr = "deny"
+print_stdout = "deny"
+pub_without_shorthand = "deny"
+same_name_method = "deny"
+semicolon_outside_block = "deny"
+shadow_reuse = "deny"
+string_add = "deny"
+string_slice = "deny"
+string_to_string = "deny"
+unnecessary_self_imports = "deny"
+unneeded_field_pattern = "deny"
+wildcard_enum_match_arm = "deny"
+missing_errors_doc = "deny"
+missing_panics_doc = "deny"
+ignored_unit_patterns = "deny"
+doc_markdown = "deny"
+needless_pass_by_value = "deny"
+redundant_pub_crate = "deny"
+# allow some lints
+module_name_repetitions = "allow"
+tests_outside_test_module = "allow"
+
