--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,6 @@ permissions:
   pull-requests: write
   contents: write
 on:
-  workflow_dispatch:
   push:
     branches: [main]
 concurrency:
@@ -11,21 +10,15 @@ concurrency:
 name: release
 jobs:
   create-release-pr:
+    name: Release-plz
     runs-on: ubuntu-latest
-    name: ${{ matrix.toolchain }} / release-plz
-    strategy:
-      matrix:
-        toolchain: [stable]
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
         with:
-          # fetch-depth: 0 is needed to clone all the git history,
-          # which is necessary to determine the next version and build the changelog
           fetch-depth: 0
-      - name: Install ${{ matrix.toolchain }}
-        uses: dtolnay/rust-toolchain@master
-        with:
-          toolchain: ${{ matrix.toolchain }}
+      - name: Install Rust toolchain
+        uses: dtolnay/rust-toolchain@stable
       - name: Run release-plz
         uses: MarcoIeni/release-plz-action@v0.5
         env:
