--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,8 +23,5 @@ jobs:
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
-      - uses: taiki-e/install-action@cargo-nextest
-      - name: cargo nextest run --all
-        run: cargo nextest run --all
-      - name: cargo test --doc
-        run: cargo test --doc
+      - name: cargo test
+        run: cargo test --all --all-features
