feat!: bump opentelemetry to 0.23.0
BREAKING CHANGE: new opentelemetry versions are treated as major
upgrades as they can silently break user stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,13 @@ serde_json = { version = "1", features = ["preserve_order"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 # otel
-tracing-opentelemetry = { version = "0.23", default-features = false }
-opentelemetry = { version = "0.22", default-features = false }
+tracing-opentelemetry = { version = "0.24", default-features = false }
+opentelemetry = { version = "0.23", default-features = false }
 
 [dev-dependencies]
-opentelemetry-datadog = { version = "0.10", features = ["reqwest-client"] }
-opentelemetry_sdk = "0.22"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+opentelemetry-datadog = { version = "0.11", features = ["reqwest-client"] }
+opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
 regex = "1.10"
 smoothy = "0.5"
 
