--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,13 +20,12 @@ serde_json = { version = "1", features = ["preserve_order"] }
 tracing = "0.1"
 tracing-subscriber = "0.3"
 # otel
-tracing-opentelemetry = { version = "0.24", default-features = false }
-opentelemetry = { version = "0.23", default-features = false }
+tracing-opentelemetry = { version = "0.29", default-features = false }
+opentelemetry = { version = "0.28", default-features = false }
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
-opentelemetry-datadog = { version = "0.11", features = ["reqwest-client"] }
-opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
+opentelemetry-datadog = { version = "0.16", features = ["reqwest-blocking-client"] }
+opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
 regex = "1.10"
 smoothy = "0.5"
 
@@ -99,4 +98,3 @@ redundant_pub_crate = "deny"
 # allow some lints
 module_name_repetitions = "allow"
 tests_outside_test_module = "allow"
-
